--- a/api-deployment.yaml
+++ b/api-deployment.yaml
@@ -15,8 +15,15 @@ spec:
         app: synergychat-api
     spec:
       containers:
-      - name: synergychat-api
-        image: bootdotdev/synergychat-api:latest
-        envFrom:
-        - configMapRef:
-            name: synergychat-api-configmap
+        - name: synergychat-api
+          image: bootdotdev/synergychat-api:latest
+          volumeMounts:
+            - name: synergychat-api-volume
+              mountPath: /persist
+          envFrom:
+            - configMapRef:
+                name: synergychat-api-configmap
+      volumes:
+        - name: synergychat-api-volume
+          persistentVolumeClaim:
+            claimName: synergychat-api-pvc
